docs: improve README layout